--- a/pages/login.html
+++ b/pages/login.html
@@ -28,7 +28,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </li>
-            <li><a href="#">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="./questions.html">Questions</a></li>
 
@@ -36,34 +36,34 @@
     </nav>
 
     <section class="login">
-    <div>
-        <form id="login-form" class="login-info" method="post">
-            <h1>Sign In</h1>
-            <h4>Sign in to your account</h4>
-            <label for=" email"><b>Email :</b></label>
-            <input type="email" placeholder="Email" name="Email" id="email" required><br>
-            <div class="error-msg"> <span id="email-err"></span></div>
+        <div>
+            <form id="login-form" class="login-info" method="post">
+                <h1>Sign In</h1>
+                <h4>Sign in to your account</h4>
+                <label for=" email"><b>Email :</b></label>
+                <input type="email" placeholder="enter email" name="Email" id="email" required><br>
+                <div class="error-msg"> <span id="email-err"></span></div>
 
-            <label for="password"><b>Password :</b></label>
-            <input type="password" placeholder="Password" name="password" id="password" required><br>
-            <div class="error-msg"> <span id="password-err"></span></div>
+                <label for="password"><b>Password :</b></label>
+                <input type="password" placeholder="enter password" name="password" id="password" required><br>
+                <div class="error-msg"> <span id="password-err"></span></div>
 
-            <div class="btn-box">
-                <button id="login-btn" type="submit">Login</button>
-            </div>
+                <div class="btn-box">
+                    <button id="login-btn" type="submit">Login</button>
+                </div>
 
-            <p><span>I forgot my password <b><a href="#">click here</a></b> to reset</span></p>
+                <p><span>I forgot my password <b><a href="#">click here</a></b> to reset</span></p>
 
-            <p>Not a member? <b><a href="sign-up.html"> sign-up</a></b> now</p>
-        </form>
-    </div>
+                <p>Not a member? <b><a href="sign-up.html"> sign-up</a></b> now</p>
+            </form>
+        </div>
 
-    <div class="login-img">
-        <img id="img" src="../images/login-img.png" alt="login image">
-    </div>
-</section>
+        <div class="login-img">
+            <img id="img" src="../images/login-img.png" alt="login image">
+        </div>
+    </section>
 
-    <script type="text/javascript" src="../javascript/login.js"></script>
+    <script type="module" src="../javascript/login.js"></script>
 </body>
 
 </html>
