--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -28,7 +28,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </li>
-            <li><a href="#">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="./questions.html">Questions</a>
 
@@ -71,7 +71,7 @@
             <img id="img" src="../images/signup-pic.png" alt="Picture showing someone signing up">
         </div>
     </section>
-    <script type="text/javascript" src="../javascript/signup.js"></script>
+    <script type="module" src="../javascript/signup.js"></script>
 </body>
 
 </html>
