--- a/pages/login.html
+++ b/pages/login.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="#">
+            <a href="../index.html">
                 <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
