--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -15,9 +15,11 @@
 </head>
 
 <body>
+    <div id="preloader"></div>
+
     <nav>
         <div class="logo">
-            <a href="#">
+            <a href="../index.html">
                 <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
@@ -50,11 +52,9 @@
                 <input type="text" placeholder="Enter Username" name="username" id="username" required><br>
                 <div class="error-msg"><span id="username-err"></span></div>
 
-
                 <label for="email">Email :</label>
                 <input type="email" placeholder="Enter Email" name="email" id="email" required><br>
                 <div class="error-msg"><span id="email-err"></span></div>
-
 
                 <label for="password">Password :</label>
                 <input type="password" placeholder="Enter Password" name="password" id="password" required><br>
@@ -72,6 +72,10 @@
         </div>
     </section>
     <script type="module" src="../javascript/signup.js"></script>
+    <script>        const loader = document.getElementById("preloader");
+        window.addEventListener("load", () => {
+            loader.style.display = "none";
+        })</script>
 </body>
 
 </html>
