--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -72,7 +72,8 @@
         </div>
     </section>
     <script type="module" src="../javascript/signup.js"></script>
-    <script>        const loader = document.getElementById("preloader");
+    <script>
+        const loader = document.getElementById("preloader");
         window.addEventListener("load", () => {
             loader.style.display = "none";
         })</script>
