--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div id="preloader"></div>
     <nav>
         <div class="logo">
             <a href="#">
@@ -29,7 +30,7 @@
                 </div>
             </li>
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./pages/about.html">About</a></li>
             <li><a href="./pages/questions.html">Questions</a></li>
         </ul>
     </nav>
@@ -45,10 +46,14 @@
             </div>
         </div>
         <div class="img">
-            <img src="./images/home-img.png"
-                alt="picture of someone asking and getting answers for a question">
+            <img src="./images/home-img.png" alt="picture of someone asking and getting answers for a question">
         </div>
     </div>
+    <script>
+        const loader = document.getElementById("preloader");
+        window.addEventListener("load", () => {
+            loader.style.display = "none";
+        })</script>
 </body>
 
 </html>
