(FEATURE): ABOUT PAGE (#9)
* d

* ft(project): made changes

* try to make the search work
* create an about page

--- a/pages/questions.html
+++ b/pages/questions.html
@@ -25,7 +25,7 @@
         <ul class="menu">
             <li>
                 <div class="search_box">
-                    <input type="search" placeholder="search for questions...">
+                    <input type="search" id="search" placeholder="search for questions..." data-search>
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </li>
@@ -41,9 +41,8 @@
             <a href="#">Tags</a>
             <a href="#">Users</a>
         </div>
-        </div>
 
-        <div .class="qs-info">
+        <div class="qs-info">
             <div class="top">
                 <p> Top Questions</p>
                 <div class="btn">
