ft(project design): Modify the website outlook
* add info to the about page
* remove search bar from some pages
* create a search function on the questions page

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,21 +23,75 @@
             </a>
         </div>
         <ul class="menu">
-            <li>
-                <form id="search">
-                    <div class="search_box">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="search" placeholder="search for questions...">
-                       
-                    </div>
-                </form>
-            </li>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="./questions.html">Questions</a></li>
         </ul>
     </nav>
-    <script type="module" src="../javascript/about.js"></script>
+    <section class="main">
+        <div class="text">
+            <div class="intro">Who are we</div>
+            <h1>Empowering the world to develop technology through collective knowledge.</h1>
+            <p>Stack Overflow lite hepls people find answers when they need them.<br>
+                Where developers and technologist go to share and gain knowledge.</p>
+        </div>
+        <div>
+            <img src="../images/bg-header-mobile.png" alt="group of people">
+        </div>
+        <div class="custom-shape-divider-bottom-1650533953">
+            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
+                preserveAspectRatio="none">
+                <path
+                    d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                    class="shape-fill"></path>
+            </svg>
+        </div>
+    </section>
+
+    <section class="info">
+        <div>
+            <img src="../images/qs-and-ans.jpg" alt="picture for sharing info">
+        </div>
+
+        <div class="content">
+            <h1>A public platform building the definitive collection of coding questions & answers.</h1>
+            <p>
+                Stack Overflow lite is a community-based space to find and contribute answers to technical challenges,
+                a question and answer website for professional and enthusiast programmers.
+                It features questions and answers on a wide range of topics in computer programming.
+                It was created as a tranning project based from the main stackoverflow website.
+                The website serves as a platform for users to ask and answer questions.
+            </p>
+        </div>
+    </section>
+
+    <div class="footer">
+        <div class="footer-info">
+            <div class="tags">
+                <h2>Tags</h2>
+                <ul>
+                    <li>Html</li>
+                    <li>Javascript</li>
+                    <li>Css</li>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>Jquery</li>
+                    <li>C</li>
+                    <li>C++</li>
+                    <li>Database</li>
+                </ul>
+            </div>
+            <div class="company">
+                <h2>Company</h2>
+                <ul>
+                    <a href="./about.html"><li>About</li></a>
+                    <li>Contact us</li>
+                    <li>Blog</li>
+                </ul>
+            </div>
+        </div>
+
+        <script type="module" src="../javascript/about.js"></script>
 </body>
 
 </html>
