--- a/pages/questions.html
+++ b/pages/questions.html
@@ -18,7 +18,7 @@
     <div id="preloader"></div>
     <nav>
         <div class="logo">
-            <a href="#">
+            <a href="../index.html">
                 <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
@@ -30,13 +30,13 @@
                 </div>
             </li>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="./questions.html">Questions</a></li>
         </ul>
     </nav>
     <section class="details">
         <div class="sidenav">
-            <a href="#">Home</a>
+            <a href="../index.html">Home</a>
             <a href="./questions.html">Questions</a>
             <a href="#">Tags</a>
             <a href="#">Users</a>
@@ -61,12 +61,12 @@
         </div>
     </section>
     <script type="module" src="../javascript/questions.js"></script>
-<script>
-    const loader = document.getElementById("preloader");
-    window.addEventListener("load", ()=>{
-        loader.style.display = "none";
-    })
-</script>
+
+    <script>        const loader = document.getElementById("preloader");
+        window.addEventListener("load", () => {
+            loader.style.display = "none";
+        })</script>
+
 </body>
 
 </html>
