--- a/index.html
+++ b/index.html
@@ -18,18 +18,12 @@
     <div id="preloader"></div>
     <nav>
         <div class="logo">
-            <a href="#">
+            <a href="index.html">
                 <img src="./images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
         <ul class="menu">
-            <li>
-                <div class="search_box">
-                    <input type="search" placeholder="search for questions...">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-            </li>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="./pages/about.html">About</a></li>
             <li><a href="./pages/questions.html">Questions</a></li>
         </ul>
