--- a/pages/login.html
+++ b/pages/login.html
@@ -31,7 +31,7 @@
                 </div>
             </li>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="./questions.html">Questions</a></li>
 
         </ul>
@@ -66,6 +66,10 @@
     </section>
 
     <script type="module" src="../javascript/login.js"></script>
+    <script>const loader = document.getElementById("preloader");
+        window.addEventListener("load", () => {
+            loader.style.display = "none";
+        })</script>
 </body>
 
 </html>
