--- a/pages/question.html
+++ b/pages/question.html
@@ -22,14 +22,8 @@
             </a>
         </div>
         <ul class="menu">
-            <li>
-                <div class="search_box">
-                    <input type="search" placeholder="search for questions...">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
-            </li>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="./questions.html">Questions</a></li>
         </ul>
     </nav>
